[gd_scene load_steps=3 format=3 uid="uid://bs8no766pwm1l"]

[ext_resource type="Script" path="res://typing/Dialogue2.gd" id="1_gtwwl"]
[ext_resource type="FontFile" uid="uid://cy4apunlm3a4c" path="res://typing/superstar_memesbruh03.ttf" id="2_mubgc"]

[node name="Dialogue" type="Node2D"]
script = ExtResource("1_gtwwl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1638.0
offset_bottom = 918.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = -3.0
offset_right = 1153.0
offset_bottom = 647.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_mubgc")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
